// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errorPath case paths should match the snapshot 1`] = `
{
  "casePaths": {
    "asn": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "ArrestSummonsNumber",
    ],
    "magistratesCourtReference": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "CourtReference",
      "MagistratesCourtReference",
    ],
  },
}
`;

exports[`errorPath offence and result should match the snapshot when offence index is 0 1`] = `
{
  "amountSpecifiedInResult": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "Offence",
    0,
    "Result",
    0,
    "AmountSpecifiedInResult",
    3,
  ],
  "offence": {
    "courtCaseReference": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "CourtCaseReferenceNumber",
    ],
    "offenceReason": {
      "localOffenceCode": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "CriminalProsecutionReference",
        "OffenceReason",
        "LocalOffenceCode",
        "OffenceCode",
      ],
      "offenceCodeReason": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "CriminalProsecutionReference",
        "OffenceReason",
        "OffenceCode",
        "Reason",
      ],
    },
    "reasonSequence": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "CriminalProsecutionReference",
      "OffenceReasonSequence",
    ],
    "result": [Function],
  },
  "result": {
    "amountSpecifiedInResult": [Function],
    "nextHearingDate": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "Result",
      0,
      "NextHearingDate",
    ],
    "nextResultSourceOrganisation": {
      "organisationUnitCode": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Offence",
        0,
        "Result",
        0,
        "NextResultSourceOrganisation",
        "OrganisationUnitCode",
      ],
    },
    "resultClass": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "Result",
      0,
      "ResultClass",
    ],
    "resultQualifierVariable": [Function],
    "resultVariableText": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "Result",
      0,
      "ResultVariableText",
    ],
  },
  "resultQualifierVariableCode": {
    "Code": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "Result",
      0,
      "ResultQualifierVariable",
      2,
      "Code",
    ],
    "DurationType": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Offence",
      0,
      "Result",
      0,
      "ResultQualifierVariable",
      2,
      "Duration",
      "DurationType",
    ],
  },
}
`;

exports[`errorPath result should match the snapshot when offence index is -1 1`] = `
{
  "amountSpecifiedInResult": [
    "AnnotatedHearingOutcome",
    "HearingOutcome",
    "Case",
    "HearingDefendant",
    "Result",
    0,
    "AmountSpecifiedInResult",
    3,
  ],
  "result": {
    "amountSpecifiedInResult": [Function],
    "nextHearingDate": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Result",
      0,
      "NextHearingDate",
    ],
    "nextResultSourceOrganisation": {
      "organisationUnitCode": [
        "AnnotatedHearingOutcome",
        "HearingOutcome",
        "Case",
        "HearingDefendant",
        "Result",
        0,
        "NextResultSourceOrganisation",
        "OrganisationUnitCode",
      ],
    },
    "resultClass": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Result",
      0,
      "ResultClass",
    ],
    "resultQualifierVariable": [Function],
    "resultVariableText": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Result",
      0,
      "ResultVariableText",
    ],
  },
  "resultQualifierVariableCode": {
    "Code": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Result",
      0,
      "ResultQualifierVariable",
      2,
      "Code",
    ],
    "DurationType": [
      "AnnotatedHearingOutcome",
      "HearingOutcome",
      "Case",
      "HearingDefendant",
      "Result",
      0,
      "ResultQualifierVariable",
      2,
      "Duration",
      "DurationType",
    ],
  },
}
`;
